--- a/ui/src/scss/sp/forms.scss
+++ b/ui/src/scss/sp/forms.scss
@@ -196,3 +196,7 @@ mat-form-field.mat-mdc-form-field.form-field-size-smaller {
         font-size: 11pt;
     }
 }
+
+.fix-input-label {
+    margin-bottom: 20px;
+}
